included implemetation for API updateIngestionStatus